push some minor changes

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
  /* main css style for the conservation delivery application for the louisiana chapter */
+.cda-sidebar-wrapper{
+	padding: 7px;
+}
+.blueFont{
+	color: #2f6384;
+}
 
- 
+
+
