--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 .cda-sidebar-wrapper{
 	padding: 7px;
 }
-h4{
+h4,h5{
 	margin: 8px 0 8px 0 !important;
 }
 button{
@@ -25,6 +25,12 @@ button{
 }
 .cda-sediment-options-wrapper h5{
 	margin: 3px 0 3px 15px;
+}
+.cda-areaScenario-section-wrapper{
+	display: flex;
+}
+.cda-selected-areas-wrapper{
+	margin-left: auto;
 }
 
 
