--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@ button{
 .blueFont{
 	color: #2f6384;
 }
+.cda-green-spinner{
+	height: 30px; width: 30px;
+}
 
 /* main side bar styles */
 .cda-localProject-options-wrapper{
@@ -72,6 +75,22 @@ button{
 
 .cda-select-bmp-wrapper{
 	text-align: center; margin-top: 20px;
+}
+
+/* BMP SECTION STYLING ********************************************************************************************************* */
+.cda-bmp-section-wrapper{
+	display: none;
+}
+.cda-bmp-header{
+	text-align: center;
+}
+
+.cda-bmp-item-wrapper{
+	border: 1px solid grey; margin: 10px;
+    padding: 10px;
+}
+.cda-bmp-select-menu{
+	width:250px;
 }
 
 
