--- a/css/main.css
+++ b/css/main.css
@@ -46,13 +46,20 @@ button {
   margin-bottom: 20px;
 }
 .cda-selected-area-wrapper {
-  background-color: red;
+  /* background-color: red; */
+  border: solid 1px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
   position: absolute;
   right: 10px;
-  top: 100px;
-  width: 220px;
+  top: 66px;
+  width: 170px;
+  text-align: center;
+  padding: 5px;
 }
-
+.cda-area-wrapper {
+  display: flex;
+  justify-content: center;
+}
 /* BMP SECTION STYLING ********************************************************************************************************* */
 
 /* report styles ***********************************************/
