--- a/css/main.css
+++ b/css/main.css
@@ -82,4 +82,7 @@ button {
 .cda-bmp-select-wrapper {
   display: none;
 }
+.cda-retreiving-data-wrapper {
+  display: none;
+}
 /* report styles ***********************************************/
