--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ button {
 .cda-bmp-select-wrapper-header {
   background-color: rgba(244, 244, 244);
   position: fixed;
-  width: 415px;
+  width: 435px;
   left: 46px;
   top: 95px;
   height: 155px;
@@ -116,6 +116,9 @@ button {
 .cda-total-header {
   margin-bottom: 3px;
   padding-bottom: 3px;
+  font-size: 19px;
+  border-bottom: 1px solid rgb(47, 99, 132, 0.2);
+  text-align: center;
 }
 .cda-bmp-selected-wrapper {
   margin: 5px;
@@ -149,12 +152,29 @@ button {
 }
 .cda-crop-header {
   font-size: 19px;
-  text-align: center;
-  border-bottom: 1px solid rgb(47, 99, 132, 0.2);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .cda-crop-header-name {
   color: rgb(47, 99, 132);
   font-weight: bold;
+  margin-left: auto;
+  padding-right: 5px;
+}
+.cda-crop-expand-collapse {
+  font-size: 12px;
+  color: #2f6384;
+  margin-left: auto;
+}
+.cda-crop-expand-collapse:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+.cda-crop-information-wrapper {
+  /* display: none; */
+  border-top: 1px solid rgb(47, 99, 132, 0.2);
 }
 .cda-bmp-remove-button {
   position: absolute;
