--- a/css/main.css
+++ b/css/main.css
@@ -97,12 +97,10 @@ button {
   box-shadow: -2px 0px 5px 1px rgba(51, 51, 51, 0.3);
   z-index: 1000;
 }
-.cda-back-to-main-button,
-.cda-back-to-bmp-button {
+.cda-back-to-main-button {
   padding: 1px !important;
 }
-.cda-create-report-button,
-.cda-print-report-button {
+.cda-create-report-button {
   padding: 1px !important;
   position: absolute;
   right: 7px;
@@ -122,7 +120,7 @@ button {
 }
 .cda-bmp-selected-wrapper {
   margin: 5px;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgb(243 243 243);
   border: 1px solid black;
   padding: 3px;
 }
@@ -170,7 +168,8 @@ button {
 }
 .cda-crop-expand-collapse:hover {
   cursor: pointer;
-  font-weight: bold;
+  color: #03446d;
+  /* font-weight: bold; */
 }
 .cda-crop-information-wrapper {
   /* display: none; */
@@ -230,4 +229,32 @@ button {
   border: 1px solid black;
   height: 300px;
   margin-top: 20px;
+}
+.cda-report-sticky-buttons {
+  background-color: rgba(244, 244, 244);
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 100000000;
+  /* height: 100px; */
+  padding: 10px;
+  top: 95px;
+  width: 735px;
+  left: 46px;
+  text-align: center;
+  box-shadow: -2px 0px 5px 1px rgba(51, 51, 51, 0.3);
+}
+.cda-print-report-button,
+.cda-back-to-bmp-button {
+  font-size: 15px !important;
+  padding: 1.5px !important;
+  margin: 0 !important;
+}
+.cda-temp-report-header {
+  text-align: center;
+  margin-top: 50px;
+}
+.cda-temp-report-header h1,
+.cda-temp-report-header h4 {
+  margin: 0;
 }
