--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,8 @@ button {
   width: 735px;
   left: 46px;
   text-align: center;
-  box-shadow: -2px 0px 5px 1px rgba(51, 51, 51, 0.3);
+  /* box-shadow: -2px 0px 5px 1px rgba(51, 51, 51, 0.3); */
+  box-shadow: 0px 2px 5px 0px rgba(51, 51, 51, 0.3);
 }
 .cda-print-report-button,
 .cda-back-to-bmp-button {
@@ -250,11 +251,12 @@ button {
   padding: 1.5px !important;
   margin: 0 !important;
 }
-.cda-temp-report-header {
-  text-align: center;
-  margin-top: 50px;
-}
+
 .cda-temp-report-header h1,
 .cda-temp-report-header h4 {
   margin: 0;
+}
+.cda-report-header-wrapper {
+  text-align: center;
+  margin-top: 50px;
 }
