--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,9 @@ button {
 .cda-retreiving-data-wrapper {
   display: none;
 }
+.cda-error-retreiving-data-wrapper {
+  display: none;
+}
 .cda-bmp-select-menu {
   width: 70%;
 }
