--- a/css/main.css
+++ b/css/main.css
@@ -325,3 +325,22 @@ table {
   display: flex;
   margin-bottom: 5px;
 }
+
+.cda-print-map-legend {
+  width: 200px;
+  background: white;
+  margin-top: -38px;
+  z-index: 10000000;
+  position: absolute;
+  margin-left: 41px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+.cda-print-map-legend-box {
+  width: 40px;
+  height: 20px;
+  border: 2px solid black;
+  margin: 5px;
+}
