--- a/css/main.css
+++ b/css/main.css
@@ -203,11 +203,21 @@ button {
   margin-left: auto;
   margin-top: -18px;
 }
+.cda-bmp-toggle-button {
+  position: absolute;
+  right: 22px;
+  margin-top: 35px;
+  color: grey;
+}
 .cda-bmp-remove-button:hover {
   cursor: pointer;
   color: black;
 }
 .cda-bmp-reset-button:hover {
+  cursor: pointer;
+  color: black;
+}
+.cda-bmp-toggle-button:hover {
   cursor: pointer;
   color: black;
 }
