--- a/css/main.css
+++ b/css/main.css
@@ -281,12 +281,12 @@ button {
   position: relative;
 }
 .cda-report-sticky-buttons {
-  background-color: rgba(244, 244, 244);
+  /* background-color: rgba(244, 244, 244); */
   padding: 10px;
   width: 750px;
   text-align: center;
   margin-left: -7px;
-  box-shadow: 0px 2px 5px 0px rgb(51 51 51 / 30%);
+  /* box-shadow: 0px 2px 5px 0px rgb(51 51 51 / 30%); */
   margin-top: 43px;
 }
 .cda-print-report-button,
@@ -382,6 +382,9 @@ table {
   body {
     overflow: visible;
     -webkit-print-color-adjust: exact;
+  }
+  .flex-container {
+    overflow-y: initial;
   }
   .cda-report-wrapper {
     display: none;
