--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,13 @@ button {
 }
 .cda-bmp-select-button-wrapper {
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 13px;
+}
+.cda-methods-doc-wrapper {
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold;
 }
 .cda-selected-area-wrapper {
   /* background-color: red; */
