--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ button {
 }
 /* report styles ***********************************************/
 .cda-report-map {
-  width: 90%;
+  width: 650px;
   margin: auto;
   border: 1px solid black;
   /* margin-left: -7px; */
